# eddie_helper

./: README.md  example.py  pyproject.toml
src/eddie_helper/: __init__.py  make_scripts.py
