[project]
name = "eddie-helper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "chrishalcrow", email = "chrishalcrow@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
eddie-helper = "eddie_helper:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
